manifests/deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: myapp-deployment
  labels: 
     app: myapp

spec:
  replicas: 2 
  selector:
    matchLabels:
      app: myapp

  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: tomcat_myapp
        image: sainathrachakonda/tomcat
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
