manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  labels:
    app: myapp 
spec:
  type: ClusterIp
  selector:
    app: myapp 

  ports:
    - port: 8080
      targetPort: 8080
