manifests/route-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - myapp.com
  gateways:
  - myapp-gateway
  http:
  - name: myapp
    match:
    - headers:
        cookie:
          regex: "^(.*?;)?(test=true)(;.*)?$"
    route:
    - destination:
        host: myapp
        subset: v2
  - name: myapp
    route: 
    - destination: 
        host: myapp
        subset: v1

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata: 
  name: myapp
spec:
  host: myapp
  subsets:
  - name: v1
    labels: 
      subset: v1
  - name: v2
    labels: 
      subset: v2
